# PaperKalshi

./: .env.example  .gitignore  README.md  package-lock.json  package.json  proxy.ts  pyproject.toml  run.sh  vercel.json  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/account/: route.ts
app/api/auth/login/: route.ts
app/api/auth/signup/: route.ts
app/api/categories/: route.ts
app/api/cron/refresh-leaderboard/: route.ts
app/api/markets/: route.ts
app/api/mode/: route.ts
app/api/portfolio/[id]/: route.ts
app/api/quotes/: route.ts
app/api/trade/: route.ts
app/leaderboard/: page.tsx
app/trade/: page.tsx
components/: AuthForm.tsx  LeaderboardTable.tsx  TradeTerminal.tsx
lib/: account.ts  auth.ts  broker.ts  fees.ts
lib/__tests__/: logic.test.ts
lib/kalshi/: board.ts  client.ts  market.ts  mlb.ts
lib/supabase/: admin.ts  client.ts  middleware.ts  server.ts
paperkalshi/: __init__.py  fees.py  kalshi.py  kalshi_live.py  paper.py  server.py
paperkalshi/static/: trade.html
supabase/migrations/: 20260630000000_init.sql
tests/: test_kalshi.py  test_paper.py  test_webapp.py
