[project]
name = "paperkalshi"
version = "0.1.0"
description = "PaperKalshi paper-trading terminal: live Kalshi markets, a fake $100k account."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Simon Werner", email = "svwerner@gmail.com" }]
keywords = ["kalshi", "paper-trading", "prediction-markets", "trading", "fastapi"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Environment :: Web Environment",
]
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.7",
    "cryptography>=42",
    "websockets>=13",
]

[project.urls]
Repository = "https://github.com/Simeon14/PaperKalshi"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
paperkalshi = "paperkalshi.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paperkalshi"]
artifacts = ["paperkalshi/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
